# douyin-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
douyin_mcp_server/: __init__.py  server.py
src/douyin_mcp_server/: __init__.py  server.py
