[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "douyin-mcp-server"
version = "0.2.0"
description = "抖音无水印链接提取 MCP 服务器"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "yzfly", email = "yz.liu.me@gmail.com" }
]
keywords = ["mcp", "douyin", "video", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/yzfly/douyin-mcp-server"
Repository = "https://github.com/yzfly/douyin-mcp-server"
Issues = "https://github.com/yzfly/douyin-mcp-server/issues"

[project.scripts]
douyin-mcp-server = "douyin_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/douyin_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]